@@ -1,7 +1,9 @@
 AUX gnuradio-3.6.0-cmake-sysconfdir.patch 3526 RMD160 2a750aeba2100a99445f3ca1bbaae670ef50830f SHA1 5c2be1b8bcf73c515715cd6a830caea26c3ebecd SHA256 3bc919327e0bb99591cb4ef1d5868dba5b5fe4acb37ecaf81fa7df202e166a2f
 DIST gnuradio-3.5.3.2.tar.gz 4315336 RMD160 b0e0c458987a2609b46abb34a97ef0a5a4aec94a SHA1 8e34539cc677c1cda0980eb949dc16a0bd2ef30f SHA256 e559a07de634de350fcf370daca2c2931231da25370001129de34a2865843f24
 DIST gnuradio-3.6.0.tar.gz 2391734 RMD160 747dff6d0b063b56b277072208573c7b05ee0af4 SHA1 7dfb82924cfff2e3af1dc744561d40a8030b05cc SHA256 17327d9fd03dbbdefe920536e1bad1de0ff80e101846109e0ec2654314f55376
+DIST gnuradio-3.6.1.tar.gz 2475061 RMD160 dde0e47addf8cb620096ee4abfee31b21e9547d1 SHA1 ee4c40b366d94887511eefa6ce52df4bdbc9d105 SHA256 22256fbbaf9bf6ed5f7b6828b54372db1ad549ee8e458290b1d2fed95bb18621
 EBUILD gnuradio-3.5.3.2.ebuild 5129 RMD160 77e0889d7f3d179e39795349d6988b7b33735320 SHA1 0f2146c4dcc131e98a35f74522216f078512bbcd SHA256 92634c4dce508770fed38f2b2d97893c092bac60148cd97a19918fbc8ed6dc88
 EBUILD gnuradio-3.6.0-r1.ebuild 4564 RMD160 b7274e392487f09f555cd8e6b4067f223e79a9fc SHA1 1eee4c123f16739e559f9426f3c8845a94655b0e SHA256 1494300a2f25379d3cb39a84f9e932e91b24f84ecdc4d3218cee9aefc9d28120
-MISC ChangeLog 1938 RMD160 0db6994d39b61cf91df0bb865c6117ad0ab83e14 SHA1 9a46ce239e18a8426c53260d4fdec1f166596b1d SHA256 5b03f0e5d653d74afbc0f8d17906a247c3059cfab8947de76f52a0a623245c41
+EBUILD gnuradio-3.6.1.ebuild 4622 RMD160 8433274abc934c2caa8aa78a8a9f90c20f76cd5e SHA1 38a7647d2d05da50fae2e1fca2ab10035a7100c9 SHA256 ba8f468a53716f5a8f72f616804b5814d2134fde74ac39c370adcb8049c9c9c8
+MISC ChangeLog 2094 RMD160 766faccc8b47f611296723229ea8f16352c3de52 SHA1 7a2e57d9498e327672dd9eeef891a1e7e7998d0b SHA256 b53a93a378b3bfea93a1795cdfd493db5cbc31026713867bd2d89bbfdac9a60e
 MISC metadata.xml 724 RMD160 68cd95117efb52534b6c8274a2845fa6682052fd SHA1 0aadc1954ad3a85c6b66c15555f01cca084cdaaf SHA256 15516501e6350df82984639fabf5710222e234c8455976ad3560991f9c065923
