@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/gnuradio
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/gnuradio/ChangeLog,v 1.10 2012/05/29 23:05:02 chithanh Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/gnuradio/ChangeLog,v 1.11 2012/06/11 22:03:05 chithanh Exp $
+
+*gnuradio-3.6.1 (11 Jun 2012)
+
+  11 Jun 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +gnuradio-3.6.1.ebuild:
+  Version bump, bug #420739.
 
 *gnuradio-3.6.0-r1 (29 May 2012)
 
